[package]
name = "imgui-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
copypasta = "0.8.2"
imgui = "0.11.0"
glium = "0.32.1"
imgui-glium-renderer = "0.11.0"
imgui-winit-support = "0.11.0"
uuid = {version="1.3.2", features=["v4", "fast-rng"]}
